<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:gravity="center"
        android:orientation="vertical"
        android:background="#eee" >

        <ImageView
            android:layout_width="280dp"
            android:layout_height="160dp"
            android:src="@drawable/hexing" 
            android:contentDescription="@string/logo"/>
            
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="30sp" />
		
		<RelativeLayout android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="#eee"
		    android:orientation="vertical" 
		    android:gravity="center_horizontal">
		    
			<EditText 
			    android:id="@+id/login_user_edit"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textColor="#000"
			    android:textSize="15sp"
			    android:layout_marginTop="25dp"
			    android:layout_marginLeft="20dp"
			    android:layout_marginRight="20dp"
			    android:singleLine="true"
			    android:background="@drawable/abs__textfield_searchview_holo_light"
			    android:hint="@string/username"/>
			<EditText 
			    android:id="@+id/login_passwd_edit"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/login_user_edit"
			    android:textColor="#000"
			    android:textSize="15sp"
			    android:layout_marginTop="25dp"
			    android:layout_marginLeft="20dp"
			    android:layout_marginRight="20dp"
			    android:background="@drawable/abs__textfield_searchview_holo_light"
			    android:inputType="textPassword"
			    android:singleLine="true"
			    android:hint="@string/password"/>
			
			    
		    <CheckBox
		        android:id="@+id/save_passwd" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="23dp"
		        android:layout_marginTop="25dp"
		        android:layout_below="@id/login_passwd_edit"
		        android:paddingLeft="40dp"
		        android:layout_alignParentLeft="true"
		        android:text="@string/save_password"
		        android:gravity="center_vertical"
		        android:textSize="12sp"
		        android:textColor="#000"
		        android:background="#0000"
		        />
		     
		     <Button
		        android:id="@+id/login_login_btn"
		        android:layout_width="90dp"
		        android:layout_height="40dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="20dp"
		        android:layout_below="@id/login_passwd_edit"
		        android:layout_alignParentRight="true"
		        android:text="@string/login"
		        android:background="@drawable/btn_style_green"
		        android:textColor="#ffffff"
		        android:textSize="18sp"
		        android:onClick="login"
		        />
		</RelativeLayout>
</LinearLayout>